tests/netedit/basic/configs/netecfg/load/invalid/all_empty/errors.netedit
Error: No nodes loaded.
Error: Failed to build network.
TestFunctions: Killed Netedit process. 'reference.png' not found
